[tool.poetry]
name = "webscraping"
version = "0.1.0"
description = ""
authors = ["jadiazm <jonathan.diazm5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.27.1"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
